step5code/Micro.g4
grammar Micro;

/*other stuff*/

KEYWORD :
	'PROGRAM' | 'BEGIN' | 'END' | 'FUNCTION' | 'READ' | 'WRITE' | 'IF' |
	'ELSE' | 'ENDIF' | 'WHILE' | 'ENDWHILE' | 'CONTINUE' | 'BREAK' |
	'RETURN' | 'INT' | 'VOID' | 'STRING' | 'FLOAT' ;
OPERATOR :
	':=' | '+' | '-' | '*' | '/' | '=' | '!=' | '<' | '>' | '(' |
	')' | ';' | ',' | '<=' | '>=' ;
IDENTIFIER:
	[A-za-z]([A-za-z]|[0-9])+ | [A-za-z] ;
INTLITERAL:
	[0-9]+;
FLOATLITERAL:
	( [0-9]+ '.' [0-9]+ ) | ('.' [0-9]+);
STRINGLITERAL:
	'"' ~('"')* '"' ;
WS:
	([ \t\r\n]+ | '--' ~('\n')*) -> skip ;

/*program*/
program:
	'PROGRAM' id 'BEGIN' pgm_body 'END';
id:
	IDENTIFIER;
var_id:
	IDENTIFIER;
pgm_body:
	decl func_declarations;
decl:
	string_decl decl | var_decl decl |  ;

/*global string declaration*/
string_decl:
	'STRING' id ':=' str ';' ;
str:
	STRINGLITERAL;

/*variable declarations*/
var_decl:
	var_type var_id_list ';' ;
var_type:
	'FLOAT' | 'INT';
any_type:
	var_type | 'VOID';
var_id_list:
	var_id var_id_tail;
var_id_tail:
	',' var_id var_id_tail |  ;
id_list:
	id id_tail;
id_tail:
	',' id id_tail |  ;

/*function parameter list*/
param_decl_list:
	param_decl param_decl_tail |  ;
param_decl:
	var_type id;
param_decl_tail:
	',' param_decl param_decl_tail |  ;

/*function declarations*/
func_declarations:
	func_decl func_declarations |  ;
func_decl:
	'FUNCTION' any_type id '(' param_decl_list ')' 'BEGIN' func_body 'END';
func_body:
	decl stmt_list;

/*statement list*/
stmt_list:
	stmt stmt_list |  ;
stmt:
	base_stmt | if_stmt | do_while_stmt;
base_stmt:
	assign_stmt | read_stmt | write_stmt | return_stmt;

/*basic statements*/
assign_stmt:
	assign_expr ';' ;
assign_expr:
	id ':=' expr ;
read_stmt:
	'READ' '(' id_list ')' ';' ;
write_stmt:
	'WRITE' '(' id_list ')' ';' ;
return_stmt:
	'RETURN' expr ';' ;

/*expressions*/
expr:
	 expr_prefix factor;
expr_prefix:
	expr_prefix factor addop |  ;
factor:
	factor_prefix postfix_expr;
factor_prefix:
	factor_prefix postfix_expr mulop |  ;
postfix_expr:
	primary | call_expr;
call_expr:
	id '(' expr_list ')';
expr_list:
	expr expr_list_tail |  ;
expr_list_tail:
	',' expr expr_list_tail |  ;
primary:
	'(' expr ')' | id | INTLITERAL | FLOATLITERAL;
addop:
	'+' | '-';
mulop:
	'*' | '/';

/*complex statements*/
if_stmt:
	'IF' '(' cond ')' decl stmt_list else_part 'ENDIF';
else_part:
	'ELSIF' '(' cond ')' decl stmt_list else_part |  ;
cond:
	expr compop expr | 'TRUE' | 'FALSE';
do_cond:
	expr compop expr | 'TRUE' | 'FALSE';
compop:
	'<' | '>' | '=' | '!=' | '<=' | '>=' ;
do_while_stmt:
	'DO' decl stmt_list 'WHILE' '(' do_cond ')' ';' ;
